--- a/index.html
+++ b/index.html
@@ -7,12 +7,42 @@
     </body>
     <script src="https://unpkg.com/react@17.0.2/umd/react.production.min.js"></script>
     <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.production.min.js"></script>
-    <script>
-        const root = document.getElementById("root")
-        const span = React.createElement(
-            "span", 
-            {id : "sexy-span", style : {color : "red" }} , 
-            "Hello I'm a span");
-        ReactDOM.render(span, root)
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <script type="text/babel">
+             const root = document.getElementById("root")
+             function Title () {
+                 return (
+                    <h3 id="btn" onMouseEnter={() => console.log('mouse enter')}>Hello I'm a title</h3>
+                 )
+             }
+             function Button () {
+                 return (
+                    <button style={{backgroundColor : "tomato"}} onClick={() => console.log('im clicked')}>Click me</button>
+                 )
+             }
+            // const h3 = React.createElement(
+            //     "h3", 
+            //     {    
+            //      onMouseEnter: () => console.log('mouse enter'), 
+            //     },
+            //      "Hello I'm a span"
+            //      );
+            // const btn = React.createElement("button", 
+            // {
+            //     onClick : () => console.log("im clicked"),
+            //     style : {
+            //         backgroundColor : "tomato", 
+            //     },
+            // }, 
+            // "Click me"
+            // );
+
+            const Container = () => ( 
+                <div>
+                     <Title/>
+                     <Button/>
+                </div>
+                )
+            ReactDOM.render(<Container/>, root)
     </script>
  </html>
