--- a/index.html
+++ b/index.html
@@ -9,40 +9,21 @@
     <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.production.min.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <script type="text/babel">
-             const root = document.getElementById("root")
-             function Title () {
-                 return (
-                    <h3 id="btn" onMouseEnter={() => console.log('mouse enter')}>Hello I'm a title</h3>
-                 )
-             }
-             function Button () {
-                 return (
-                    <button style={{backgroundColor : "tomato"}} onClick={() => console.log('im clicked')}>Click me</button>
-                 )
-             }
-            // const h3 = React.createElement(
-            //     "h3", 
-            //     {    
-            //      onMouseEnter: () => console.log('mouse enter'), 
-            //     },
-            //      "Hello I'm a span"
-            //      );
-            // const btn = React.createElement("button", 
-            // {
-            //     onClick : () => console.log("im clicked"),
-            //     style : {
-            //         backgroundColor : "tomato", 
-            //     },
-            // }, 
-            // "Click me"
-            // );
+            const root = document.getElementById("root")
+            function App  (){ 
+                const [counter, setCounter] = React.useState(0);
+                const onClick = () => {
+                    setCounter(counter + 1);
+                }
+                return (
+                    <div>
+                        <h2>Total clicks : {counter}</h2>
+                         <button onClick={onClick}>Click me</button>
+                     </div>
 
-            const Container = () => ( 
-                <div>
-                     <Title/>
-                     <Button/>
-                </div>
-                )
-            ReactDOM.render(<Container/>, root)
+                );
+                
+            }
+            ReactDOM.render(<App />, root)
     </script>
  </html>
