--- a/vanilla.html
+++ b/vanilla.html
@@ -2,16 +2,17 @@
 <html>
     <body>
         <span>Total clicks : 0</span>
-        <button id = "btn">Click me</button>
+        <button id="btn">Click me</button>
     </body>
     <script>
         let counter = 0;
-        const button = document.getElementById("btn")
-        const span = docuemnt.querySelector("span")
+        const button = document.querySelector("#btn")
+        const span = document.querySelector("span")
+
         function handleClick(){
             counter = counter + 1;
-            span.innerText = `Total clicks : ${counter}`
+            span.innerText = `Total clicks : ${counter}`;
         }
-        button.addEventListener("click", handleClick);
+        button.addEventListener("click", handleClick)
     </script>
 </html>
